// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollMenu Children, arrows, header and footer Header and footer 1`] = `
<div>
  <div
    class="react-horizontal-scrolling-menu--wrapper "
  >
    <div
      class="react-horizontal-scrolling-menu--header"
    >
      <div
        data-testid="header"
      >
        Header
      </div>
    </div>
    <div
      class="react-horizontal-scrolling-menu--inner-wrapper"
    >
      <div
        class="react-horizontal-scrolling-menu--arrow-left"
      />
      <div
        class="react-horizontal-scrolling-menu--scroll-container scroll-class"
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="test1"
        >
          <div
            data-testid="test1"
          >
            {"itemId":"test1","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="test1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="test2"
        >
          <div
            data-testid="test2"
          >
            {"itemId":"test2","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
      </div>
      <div
        class="react-horizontal-scrolling-menu--arrow-right"
      />
    </div>
    <div
      class="react-horizontal-scrolling-menu--footer"
    >
      <div
        data-testid="footer"
      >
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`ScrollMenu Children, arrows, header and footer LeftArrow, ScrollContainer, MenuItems, RightArrow 1`] = `
<div>
  <div
    class="react-horizontal-scrolling-menu--wrapper "
  >
    <div
      class="react-horizontal-scrolling-menu--header"
    />
    <div
      class="react-horizontal-scrolling-menu--inner-wrapper"
    >
      <div
        class="react-horizontal-scrolling-menu--arrow-left"
      >
        <div
          class="left-arrow"
          data-testid="left-arrow"
        >
          {"isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
        </div>
      </div>
      <div
        class="react-horizontal-scrolling-menu--scroll-container scroll-class"
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="test1"
        >
          <div
            data-testid="test1"
          >
            {"itemId":"test1","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="test1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="test2"
        >
          <div
            data-testid="test2"
          >
            {"itemId":"test2","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
      </div>
      <div
        class="react-horizontal-scrolling-menu--arrow-right"
      >
        <div
          class="right-arrow"
          data-testid="right-arrow"
        >
          {"isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
        </div>
      </div>
    </div>
    <div
      class="react-horizontal-scrolling-menu--footer"
    />
  </div>
</div>
`;

exports[`ScrollMenu should render without props 1`] = `
<div>
  <div
    class="react-horizontal-scrolling-menu--wrapper "
  >
    <div
      class="react-horizontal-scrolling-menu--header"
    />
    <div
      class="react-horizontal-scrolling-menu--inner-wrapper"
    >
      <div
        class="react-horizontal-scrolling-menu--arrow-left"
      />
      <div
        class="react-horizontal-scrolling-menu--scroll-container "
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="test1"
        >
          <div
            data-testid="test1"
          >
            {"itemId":"test1","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="test1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="test2"
        >
          <div
            data-testid="test2"
          >
            {"itemId":"test2","isFirstItemVisible":false,"isLastItemVisible":false,"visibleElements":["test1","test2"],"visibleElementsWithSeparators":["test1","item1-separator","test2"],"visibleItems":["test1","item1-separator","test2"],"visibleItemsWithoutSeparators":["test1","test2"],"initComplete":true}
          </div>
        </div>
      </div>
      <div
        class="react-horizontal-scrolling-menu--arrow-right"
      />
    </div>
    <div
      class="react-horizontal-scrolling-menu--footer"
    />
  </div>
</div>
`;
